--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "jest && standard"
   },
   "dependencies": {
-    "probot": "^9.0.0"
+    "probot": "^9.0.0",
+    "probot-commands": "^1.1.0"
   },
   "devDependencies": {
     "jest": "^23.2.0",
