--- a/app.yml
+++ b/app.yml
@@ -99,6 +99,8 @@ default_permissions:
   # Commit statuses.
   # https://developer.github.com/v3/apps/permissions/#permission-on-statuses
   # statuses: read
+  
+  secrets: read
 
   # Organization members and teams.
   # https://developer.github.com/v3/apps/permissions/#permission-on-members
