--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "probot": "^9.11.3",
-    "probot-commands": "^1.1.0"
+    "probot-commands": "^1.1.0",
+    "simple-git": "^2.2.0"
   },
   "devDependencies": {
     "jest": "^23.2.0",
