--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "test": "jest && standard"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "got": "^11.1.0",
     "probot": "^9.11.3",
-    "probot-commands": "^1.1.0",
-    "simple-git": "^2.2.0"
+    "probot-commands": "^1.1.0"
   },
   "devDependencies": {
     "jest": "^23.2.0",
