--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "jest": "^23.2.0",
+    "nodemon": "^2.0.3",
     "smee-client": "^1.0.1",
     "standard": "^11.0.1"
   },
