--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
+    "enqueue": "^1.0.2",
     "got": "^11.1.0",
     "probot": "^9.11.3",
     "probot-commands": "^1.1.0"
