--- a/app.yml
+++ b/app.yml
@@ -22,8 +22,8 @@ default_events:
 # - deployment_status
 # - fork
 # - gollum
-- issue_comment
-# - issues
+# - issue_comment
+- issues
 # - label
 # - milestone
 # - member
@@ -37,7 +37,7 @@ default_events:
 # - public
 # - pull_request
 # - pull_request_review
-- pull_request_review_comment
+# - pull_request_review_comment
 # - push
 # - release
 # - repository
