--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "dotenv": "^8.2.0",
     "enqueue": "^1.0.2",
     "got": "^11.1.0",
-    "probot": "^9.11.3",
-    "probot-commands": "^1.1.0"
+    "probot": "^9.11.3"
   },
   "devDependencies": {
     "jest": "^23.2.0",
